correccion de meta

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
 
-	<meta name="description" content="Las mejores recetas de postres faciles, saluables y veganos" />
+	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 
 </head>
 <body>
