--- a/postres_celebraciones.html
+++ b/postres_celebraciones.html
@@ -20,7 +20,7 @@
 
 	<meta name="keywords" content="Recetas, recetas saludables, comida saludable, postres saludables" />
 
-	<meta name="description" content="Las mejores recetas de postres faciles, saluables y veganos" />
+	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 </head>
 
 <body>
