--- a/postulacion.html
+++ b/postulacion.html
@@ -16,13 +16,13 @@
   <title>Postulacion</title>
 
   <meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
-  <meta name="description" content="Las mejores recetas de postres faciles, saluables y veganos" />
+  <meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 
 </head>
 
 <body>
 
-  
+
 
 	<img src="logo/raudo.png" alt="Logo raudo" class="div_logo_forms">
 
