realice seccion postres_faciles

--- a/postres_saludables.html
+++ b/postres_saludables.html
@@ -34,29 +34,28 @@
 		</form> 
 	
 		<div class="cuerpo__logo">
-			<img src="logo/raudo_blanco.png"  class="cuerpo__imagen" alt="imagen de logo raudo" title="logo raudo" /> 
+			<a href="index.html"><img src="logo/raudo_blanco.png" class="cuerpo__imagen" alt="logo" title="logo Raudo"  /> </a> 
 		</div>
 
 	</div>
 		
-	<title>Raudo, tu cocina Vip</title>
 
-
+	<!-- Menu -->
 
 	<nav>
 		
 
 		<ul>
 
-			<li><a href="postres_saludables.html" target="_blank"> Postres Saludables <i class="fas fa-apple-alt"></i></a> </li> 
+			<li><a href="postres_saludables.html"> Postres Saludables <i class="fas fa-apple-alt"></i></a> </li> 
 
-			<li><a href="postres_faciles.html" target="_blank"> Postres Faciles <i class="fas fa-cookie-bite"></i></a></li>
+			<li><a href="postres_faciles.html"> Postres Faciles <i class="fas fa-cookie-bite"></i></a></li>
 
-			<li><a href="postres_veganos.html" target="_blank"> Postres Veganos <i class="fas fa-seedling"></i> </a></li>
+			<li><a href="postres_veganos.html"> Postres Veganos <i class="fas fa-seedling"></i> </a></li>
 
-			<li><a href="postres_celebraciones.html" target="_blank"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
+			<li><a href="postres_celebraciones.html"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
 
-			<li><a href="postres_goumet.html" target="_blank"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
+			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
 			
 
 		</ul>
