--- a/postulacion.html
+++ b/postulacion.html
@@ -23,49 +23,50 @@
 <body>
 
 
+  <div class="div_logo_forms">
+	 <a href="index.html"><img src="logo/raudo.png" class="cuerpo__imagen" alt="logo" title="logo Raudo"  /> </a> 
+  </div>
 
-	<img src="logo/raudo.png" alt="Logo raudo" class="div_logo_forms">
+  <div class="div_bost_forms">
 
-<div class="div_bost_forms">
-
-<div class="mb-3">
-  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
-</div>
-<div class="mb-3">
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo Electronico">
-</div>
-<div class="mb-3">
-      <select id="disabledSelect" class="form-select" placeholder="Categorias" >
-        <optgroup label="Eligue tu categorias">
-          <option>Postres Saludables</option>
-          <option>Postres Faciles</option>
-          <option>Postres Veganos</option>
-          <option>Celbraciones</option>
-          <option>Postres Gourmet</option>
-        </optgroup>  
-      </select>
-
+    <div class="mb-3">
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
     </div>
-<div class="mb-3">
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe tu Receta"></textarea>
-</div>
-
-<div class="mb-3">
-      <select id="disabledSelect" class="form-select">
-        <optgroup label="Elige tu ciudad">
-          <option>Buenos Aires</option>
-          <option>Cordoba</option>
-          <option>Mendoza</option>
-          <option>Patagonia</option>
-        </optgroup>
-      </select>
+    <div class="mb-3">
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo Electronico">
     </div>
-   <br>
-   <button type="sumit" value="Enviar"  class="btn btn-danger butto_forms_bost">Enviar</button>
+    <div class="mb-3">
+          <select id="disabledSelect" class="form-select" placeholder="Categorias" >
+            <optgroup label="Eligue tu categorias">
+              <option>Postres Saludables</option>
+              <option>Postres Faciles</option>
+              <option>Postres Veganos</option>
+              <option>Celbraciones</option>
+              <option>Postres Gourmet</option>
+            </optgroup>  
+          </select>
+
+        </div>
+    <div class="mb-3">
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe tu Receta"></textarea>
+    </div>
+
+    <div class="mb-3">
+          <select id="disabledSelect" class="form-select">
+            <optgroup label="Elige tu ciudad">
+              <option>Buenos Aires</option>
+              <option>Cordoba</option>
+              <option>Mendoza</option>
+              <option>Patagonia</option>
+            </optgroup>
+          </select>
+        </div>
+       
+       <button type="sumit" value="Enviar"  class="btn btn-danger butto_forms_bost">Enviar</button>
 
    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/@popperjs/core@2" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2" ></script>
    </body>
    </html>
