--- a/contacto.html
+++ b/contacto.html
@@ -4,17 +4,14 @@
 
 	<meta charset="utf-8">
 
-	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
- 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="estilo/estilos.css">
 
- 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-
-	<link rel="stylesheet" type="text/css" href="estilo/estilo.css">
-
-
-
+  <script src="https://kit.fontawesome.com/7395b87164.js" crossorigin="anonymous"></script>
  	<meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
   	<meta name="description" content="Las mejores recetas de postres faciles, saluables y veganos" />
 
@@ -27,27 +24,47 @@
 </head>
 
 
-<body>
+<body class="contacto_color">
 
-	<div>
+	<div class="imagen_center">
 	
-		<img src="logo/raudo_blanco.png" alt="logo">
+		<img src="logo/raudo_blanco.png" alt="logo" class="">
 
 	</div>
 
-		<h4> Contactos por : </h4>
-	<p>
-		
-		Raduro C.A. <br> <br>
+		<body>
 
-		+5408979769876 <br> <br>
+  <div class="div_bost_forms">
 
-		raudo@email.com.ar 
+    <div class="mb-3">
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
+    </div>
+    <div class="mb-3">
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo Electronico">
+    </div>
 
+    <div class="mb-3">
+          <select id="disabledSelect" class="form-select">
+            <optgroup label="Elige tu ciudad">
+              <option>Buenos Aires</option>
+              <option>Cordoba</option>
+              <option>Mendoza</option>
+              <option>Patagonia</option>
+            </optgroup>
+          </select>
+     </div>     
 
+    <div class="mb-3">
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Contanos"></textarea>
+    </div>
+        
+       <br />
+       <button type="sumit" value="Enviar"  class="btn btn-danger butto_forms_bost">Enviar</button>
 
-	</p>
+   </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2" ></script>
 
 
 </body>
