agregue recetas en todas las secciones

--- a/postres_celebraciones.html
+++ b/postres_celebraciones.html
@@ -62,9 +62,59 @@
 	</nav>
 
 
+<div class="rec_text">
+
+		<h1 class="titulo_tex"> <em>Glamurosa torta de Zanahoria </em></h1>
 
 
-	<h1>Proximamente .... </h1>
+	
+			<hr />
+
+			<p>La primera vez que probé este bizcocho de zanahoria me resultó difícil de creer, ¿un bizcocho de zanahorias?… Pues sí, así es, y está verdaderamente delicioso. Jugad a que vuestros invitados adivinen el componente principal, se sorprenderán como me sucedió a mí… Si además le ponéis una capa de frosting de queso o de chocolate fondant, pasará a convertirse en la tarta de zanahoria más rica del mundo, así que toma nota porque es la receta de bizcocho de zanahoria definitiva y una de las más fáciles.</p>
+
+			<h2 class="rec_h2"> Ingredientes </h2> 
+
+		
+
+		<p class="rec_tex_peq">
+			<strong><em>Para 8 porciones</em></strong> <br /> <br />
+
+			<strong>250 g</strong> &nbsp;&nbsp; de zanahorias crudas (ya peladas y ralladas). <br />
+			
+			<strong>200 g </strong> &nbsp; &nbsp; &nbsp; de harina. <br />
+			
+			<strong>7 gr</strong> &nbsp;e levadura en polvo o polvo de hornear  <br />
+			
+			<strong>125 ml</strong> &nbsp;de aceite de girasol <br/>
+		
+			<strong>4 u</strong> &nbsp; &nbsp; &nbsp; Huevos <br />
+			
+			<strong>200 gr</strong> &nbsp; Azucar blanca <br />
+
+			</p>
+
+			<h2 class="rec_h2"> Cómo hacerla </h2>	
+
+		
+
+		<p class="rec_tex_peq">
+			
+			<strong><em> Dificultad: Fácil </em></strong> <br /> <br />
+		
+			Tiempo total  <strong>60 m</strong> <br />
+			Elaboracion   <strong>20 m</strong> <br />		
+			Coccion       <strong>30 m</strong> <br />
+			Reposo		  <strong>2 h</strong>  <br />
+
+		</p>
+
+		<p>Trituramos las zanahorias junto con el aceite.</p>
+
+		<p>Echamos los huevos en un bol y los batimos con el azúcar, añadiendo luego la pasta de zanahoria que habíamos preparado con anterioridad. Incorporamos la harina y la levadura tamizadas y mezclamos con cuidado.</p>
+
+		<p>Engrasamos con aceite o mantequilla un molde desmontable de 24 cm como este y echamos la masa. Hornear a 185ºC unos 30 minutos o hasta que veamos que al pinchar con un palillo o la punta de cuchillo el centro del bizcocho de zanahoria éste sale limpio.</p>
+
+		<p>Este bizcocho de zanahoria podemos dejarlo tal como está si por ejemplo lo queréis para desayuno o merienda, o si lo queréis <strong>preparar para alguna celebración podéis espolvorear con azúcar glass o como hemos hecho nosotros arriba con un frosting hecho con Philadelphia y azúcar glass</strong>.</p>
 
 </body>
 </html>
