--- a/postres_veganos.html
+++ b/postres_veganos.html
@@ -64,7 +64,75 @@
 
 
 
-	<h1>Proximamente .... </h1>
+	<div class="rec_text">
+
+		<h1 class="titulo_tex"> <em>VASITOS DE CHOCOLATE Y AVELLANAS </em></h1>
+
+			
+	
+			<hr />
+
+			<p>Traigo un postre vegano que improvisé el otro día con los restos de otra receta. Hablo de estos vasitos de chocolate y avellanas súper cremosos que  presenté el otro día por Instagram. Un postre vegano fácil y muy rápido de preparar, tanto es así que solo hay que triturar los ingredientes, y puedes hacerlo perfectamente con una batidora de mano buena, aunque lo idea es tener un triturador un poquito más potente. </p>
+	
+			
+
+	</p>
+
+
+		<h2 class="rec_h2"> Ingredientes </h2> 
+
+		
+
+		<p class="rec_tex_peq">
+			<strong><em>Para 2 personas</em></strong> <br /> <br />
+
+			<strong>200 gr</strong> &nbsp;&nbsp; Avellanas (tostadas o crudas)<br />
+			
+			<strong>15</strong> &nbsp; &nbsp; &nbsp; cucharadas soperas de cacao  <br />
+			
+			<strong>6</strong> &nbsp;dátiles deshuesados  <br />
+			
+			<strong>1 l</strong> &nbsp;Leche vegetal <br/>
+		
+		
+		</p>
+
+		<h2 class="rec_h2"> Paso a paso </h2>	
+
+		
+
+		<p class="rec_tex_peq">
+			
+			<strong><em> Dificultad: Fácil </em></strong> <br /> <br />
+		
+			Tiempo total  <strong>30m</strong> <br />
+			Elaboracion   <strong>25 m</strong> <br />		
+			Coccion       <strong>15 m</strong> <br />
+			Reposo		  <strong>2 h</strong>  <br />
+				
+		</p>
+
+		<p>En un bol, mezclaremos 1 puñado de avellanas y 5 cdas soperas de cacao y 2 dátiles.</p>
+
+		<p>Si usamos un abatidora de mano, echamos un chorrito muy muy pequeño de leche vegetal, solo para humedecer ligeramente el cacao y que no salte al triturar. Si usas un triturador cerrado (tipo batidora de mano con cierre o batidora de vaso) no es necesario.</p>
+
+		<p>Trituramos poco a poco hasta conseguir una masa densa y relativamente homogénea.</p>
+
+		<p>Ahora, colocamos la masa en la base de dos vasitos de postre y lo acomodamos. En caso de que se pegue mucho a la cuchara, podemos humedecerla con agua para que la masa no se pegue y podamos trabajarla con facilidad.</p>
+
+		<p>Por otra parte, trituramos el resto de avellanas, dátiles y las 10 cucharadas de cacao sobrantes junto con 1/3 de taza de leche vegetal. Trituramos y vamos añadiendo leche hasta encontrar el punto de cremosidad que más nos guste. Yo os recomiendo que creéis una masa suave pero no demasiado líquida, como una mousse. Fíjate en la textura de la foto de abajo.</p>
+
+		<p>¡Y listo! Sírvelo o resérvalo en la nevera hasta servir.</p>
+
+
+
+
+		
+		
+		
+
+
+	</div>
 
 </body>
 </html>
