--- a/postres_goumet.html
+++ b/postres_goumet.html
@@ -58,15 +58,108 @@
 			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
 			
 
-		</ul>
-	</nav>
+			</ul>
+			</nav>
 
 
-	<div>
+		<div class="rec_text">
 
-		<h1>Proximamente .... </h1>
+			<h1 class="titulo_tex"> <em>Tarta San Marcos, así se hace este clásico de la repostería española </em></h1>
 
-	</div>
+			<p>No podía faltar en nuestro recetario un clásico de la repostería española la tarta San Marcos, un dulce que resiste el paso del tiempo con mucha elegancia. Aunque las modas en gastronomía inundan internet y las redes sociales de tartas de queso, brownies y demás dulceríos, todos ellos deliciosos, lo cierto es que da gusto volver a los sabores de siempre.</p>
+
+			<p>Es una tarta laboriosa, pero no complicada. Si se hace del tirón puede llevar su tiempo, así que no es la receta idónea para unas prisas. 	Lo mejor es preparar el bizcocho, el almíbar, las cremas de relleno y la cobertura de yema con antelación. Todo ello aguanta perfectamente en la nevera durante 24 horas. Luego solo hay que armar la tarta San Marcos el día que se quiera consumir y ¡a disfrutar!</p>
+
+
+			<h2 class="rec_h2"> Ingredientes </h2> 
+
+		
+
+			<p class="rec_tex_peq">
+			<strong><em>Para 8 porciones</em></strong> <br /> <br />
+
+			<strong>4</strong> &nbsp;&nbsp;Huevo tamaño L (para el bizcocho) <br />
+			
+			<strong>145 g </strong> &nbsp; &nbsp; &nbsp;Azúcar (para el bizcocho)
+		 	<br />
+			
+			<strong>165gr</strong> &nbsp;Harina de repostería (para el bizcocho)  <br />
+			
+			<strong>45</strong> &nbsp;Mantequilla fundida (para el bizcocho)<br/>
+		
+			<strong>600 gr</strong> &nbsp; &nbsp; &nbsp; Nata líquida para montar (para el relleno)<br />
+			
+			<strong>160 gr</strong> &nbsp; Azúcar glasé (para el bizcocho)<br />
+
+			<strong>30gr</strong> &nbsp;Cacao en polvo (para el bizcocho)  <br />
+			
+			<strong>200 gr</strong> &nbsp;Azúcar (para el almíbar)
+			<br/>
+		
+			<strong>200 mk</strong> &nbsp; &nbsp; &nbsp; Agua (para el almíbar)<br />
+			
+			<strong>180 gr</strong> &nbsp; Azúcar (para la cobertura)
+			<br />
+			<strong>60gr</strong> &nbsp;Agua (para la cobertura)  <br />
+			
+			<strong>4</strong> &nbsp;Yema de huevo (para la cobertura))<br/>
+		
+			<strong>7 gr</strong> &nbsp; &nbsp; &nbsp; Maicena (para la cobertura))<br />
+			
+			<strong>20 gr</strong> &nbsp; Azúcar para quemar ((para la cobertura)<br />
+
+			<strong>30gr</strong> &nbsp;Almendra laminada tostada, para decorar <br />
+
+			</p>
+
+			<h2 class="rec_h2"> Cómo hacerla </h2>	
+
+		
+
+			<p class="rec_tex_peq">
+			
+			<strong><em> Dificultad: Media </em></strong> <br /> <br />
+		
+			Tiempo total  <strong>1 y 30 m</strong> <br />
+			Elaboracion   <strong>15 m</strong> <br />		
+			Coccion       <strong>60 m</strong> <br />
+			Reposo		  <strong>2 h</strong>  <br />
+
+			</p>
+
+			<p> <strong>Para el bizcocho</strong></p>
+
+			<p>Batimos los huevos y el azúcar hasta blanquear. Añadimos la harina, previamente tamizada, y un pellizco de sal. Mezclamos con suavidad antes de incorporar la mantequilla fundida. Removemos de nuevo.</p>
+
+			<p>Extendemos la mezcla en una bandeja de horno cubierta con papel vegetal, procurando que quede del mismo grosor por todos lados. Cocemos en el horno, precalentado a 180º C con calor arriba y abajo, durante 10-12 minutos. Retiramos del horno y, cuando esté frío, cortamos en tres rectángulos iguales.</p>
+
+			<p> <strong>Para los rellenos</strong></p>
+
+			<p>Montamos la nata, que habrá de estar muy fría, con el azúcar glasé y la dividimos en dos cuencos. A la nata de uno de los cuencos le añadimos el cacao en polvo, tamizado, para obtener una trufa rápida. Reservamos ambos rellenos en la never</p>
+
+			<p> <strong>Para el almíbar</strong></p>
+
+			<p>Ponemos todos los ingredientes en un cazo (el ron es opcional) y llevamos a ebullición. Apagamos el fuego cuando se haya diluido el azúcar, dejamos enfriar. Con este almíbar calaremos los bizcochos, así que lo reservamos.</p>
+
+			<p><strong>Para la cobertura de yema tostada</strong></p>
+
+			<p>Hervimos el agua, el azúcar, el zumo de limón y el extracto de vainilla en un cacito a fuego bajo durante cinco minutos. Batimos las yemas con la maicena y añadimos una cucharada de la mezcla anterior. Removemos y volcamos en el cacito con el resto del almíbar, pasándolo por un colador.
+
+			Cocemos la preparación a fuego muy suave, removiendo todo el rato con unas varillas, hasta que espese. La mezcla no debe sobrepasar los 65º C, ojo con esto porque se nos cortaría. Retiramos del fuego y reservamos.</p>
+
+			<p><strong>Montaje</strong></p>
+
+			<p>Colocamos un bizcocho en un plato o tabla de servir y lo calamos con almíbar. Cubrimos con una capa de trufa. Colocamos otro bizcocho encima y lo calamos con almíbar. Cubrimos con una capa de nata montada (guardamos para el sobrante para los bordes y la decoración final).</p>
+
+			<p>Colocamos un bizcocho en un plato o tabla de servir y lo calamos con almíbar. Cubrimos con una capa de trufa. Colocamos otro bizcocho encima y lo calamos con almíbar. Cubrimos con una capa de nata montada (guardamos para el sobrante para los bordes y la decoración final).</p>
+
+			<p>Tapamos con el tercer y último bizcocho, calamos con más almíbar y cubrimos los laterales con un poco de la nata montada que habíamos reservado. El resto lo metemos en una manga pastelera con una boquilla rizada. Cubrimos la superficie con una fina capa de yema. Espolvoreamos con azúcar y tostamos ligeramente con un soplete o quemador.</p>
+
+			<p>Decoramos los laterales de la tarta con las almendras fileteadas tostadas y dibujamos un cordón de nata en el contorno de la superficie. Dejamos reposar en la nevera un par de horas antes de servir.</p>
+
+	
+			<hr />
+		</div>
 
 </body>
 </html>
