--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	
@@ -28,13 +29,15 @@
 	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 
 </head>
-<body class="elemento">
+<body>
+
+
 
 	<!-- Encabezado -->
 
 	<div class="cuerpo">
 
-		<a href="postulacion.html" target="_blank" class="cuerpo__boton"> <i class="fas fa-crown"></i> Postula tus recetas</a>
+		<a href="postulacion.html" class="cuerpo__boton"> <i class="fas fa-crown"></i> Postula tus recetas</a>
 
 		<form class="cuerpo__formulario">
 		<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
@@ -63,11 +66,13 @@
 
 			<li><a href="postres_celebraciones.html"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
 
-			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
+			<li><a href="postres_goumet.html"> Postres Gourmet  <i class="fas fa-cheese"></i></a></li>
 			
 
 		</ul>
 	</nav>
+
+	
 
 	<!-- Banner de Postres -->
 
@@ -87,10 +92,10 @@
 			<div class="card-group">
 
 	  			<div class="card">
-	    			<img src="imagenes/coco.jpg" class="card-img-top carrusul_img_bost" alt="imagen de galleta de coco" title="galleta de coco" />
+	    			<img src="imagenes/coco.jpg" class="card-img-top imagen" alt="imagen de galleta de coco" title="galleta de coco" />
 	    		<div class="card-body">
 
-	     	 		<h5 class="card-title">Galletas de Coco</h5>
+	     	 		<p class="card-title"> <strong> Galletas de Coco </strong></p>
 	      			<p class="card-text">Aromáticas, crujientes y deliciosas. Estas galletas de coco caseras te conquistarán en cuando las pruebes. La masa es muy blandita, por lo que podrás darle forma usando solamente tus manos.</p>
 	      			<p class="card-text"><small class="text-muted">Tiempo estimado, 25 minutos</small></p>
 	    		</div>
@@ -108,7 +113,7 @@
 			    <div class="modal-content">
 
 			      <div class="modal-header">
-			        <h5 class="modal-title">Galletas de Coco</h5>
+			        <p class="modal-title"> <strong>Galletas de Coco</strong> </p>
 			        <button type="button" class="btn-close"></button>
 			      </div>
 			      
@@ -130,10 +135,10 @@
 
 		  <div class="card">
 
-		    <img src="imagenes/galleta1.jpg" class="card-img-top carrusul_img_bost" alt=" imagen de una gellata de avena y chocolate" title="galleta choco avena" />
+		    <img src="imagenes/galleta1.jpg" class="card-img-top imagenes" alt=" imagen de una gellata de avena y chocolate" title="galleta choco avena" />
 
 		    <div class="card-body">
-		      <h5 class="card-title">Galletas Avenachoco</h5>
+		      <p class="card-title"> <strong>Galletas Avenachoco </strong></p>
 		      <p class="card-text"> Las galletas son uno de los grandes comodines que suele haber en la despensa, y que se utilizan en un montón de situaciones, como desayunar o merenda o para preparar un postre. </p>
 		      <p class="card-text"><small class="text-muted">Timepo estimado, 10 minutos</small></p>
 		  	</div>
@@ -150,7 +155,7 @@
 			    <div class="modal-content">
 
 			      <div class="modal-header">
-			        <h5 class="modal-title">Galletas Avena y Chocolate</h5>
+			        <p class="modal-title"> <strong>Galletas Avena y Chocolate </strong></p>
 			        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			      </div>
 
@@ -174,10 +179,10 @@
 
 		  <div class="card">
 
-		    <img src="imagenes/galletas.jpg" class="card-img-top carrusul_img_bost" alt="galletas de chocolate" title="galleta de chocolate" />
+		    <img src="imagenes/galletas.jpg" class="card-img-top imagen" alt="galletas de chocolate" title="galleta de chocolate" />
 
 		    <div class="card-body">
-		      <h5 class="card-title">Galletas de Chocolate</h5>
+		      <p class="card-title"> <strong>Galletas de Chocolate </strong></p>
 		      <p class="card-text">Estas galletas de chocolate son sencillas y deliciosas, no requieren enfriar la masa ni moldes. Quedan con los bordes crocantes y el centro parecido a un brownie. Buenísimas.</p>
 		      <p class="card-text"><small class="text-muted">Tiempo estimado, 20 minutos</small></p>
 		    </div>
@@ -194,7 +199,7 @@
 			    <div class="modal-content">
 
 			      <div class="modal-header">
-			        <h5 class="modal-title">Galletas de Chocolate</h5>
+			        <p class="modal-title"> <strong> Galletas de Chocolate</strong></p>
 			        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			      </div>
 
@@ -216,6 +221,7 @@
 		</div>
 
 		</div>
+	</div>
 
 	</section>	
 
@@ -224,7 +230,7 @@
 
    	<section>
 
-		<div id="carouselExampleCaptions" class="  carousel slide " data-bs-ride="carousel">
+		<div id="carouselExampleCaptions" class="carousel slide carousel_bostra" data-bs-ride="carousel">
 
 		  	<div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -235,9 +241,9 @@
 	  		<div class="carousel-inner">
 
 	    		<div class="carousel-item active">
-			    	<img src="imagenes/3leches.jpg" class="d-block w-100 cuerpo__imagen" alt="imagen de torta tres leches" title="torta tres leches" />
+			    	<img src="imagenes/3leches.jpg" class="d-block w-100 cuerpo__imagen" alt="imagen de torta tres leches" title="torta tres leches" / >
 			    	<div class="carousel-caption d-none d-md-block carousel_letras">
-				        <h5>Martina Rodriguez, Cord. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></h5>
+				        <p><strong>Martina Rodriguez, Cord. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></strong> </p>
 		        		<p>Hola mi nombre es Martina y fui catalogada gracias a ustedes al mejor postre caribeño del mes <br /> ¡Que emocion!</p>
 	      			</div>
 	    		</div>
@@ -248,8 +254,8 @@
 		      		<img src="imagenes/zanahoria_vig.jpg" class="d-block w-100 cuerpo__imagen " alt=" imagen de torta de zanahoria" title="torta de zanahoria"/> 
 		      	
 		      		<div class="carousel-caption d-none d-md-block carousel_letras ">
-				        <h5>Alex Fuentes, Bss. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></h5>
-				        <p>¡Siempre supe que la receta de la nona trinfaria algun dia! Espero les guste la chocotort!</p>
+				        <p><strong>Alex Fuentes, BsA. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></strong></p>
+				        <p>¡Siempre supe que la receta de la nona triunfaria algun dia! Espero les guste la chocotorta!</p>
 	      			</div>
 	    		</div>
 
@@ -257,8 +263,8 @@
 	    	<div class="carousel-item  ">
 	    		<img src="imagenes/chocotorta.jpg " class="d-block w-100 cuerpo__imagen" alt="imagen de una chocotorta" title="chocotorta" />
 	    		<div class="carousel-caption d-none d-md-block carousel_letras">
-				    <h5>Andrea Garcia, Bss. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></h5>
-				    <p>Se lo dificil que es contrar un buen postre vegano, asi que me anime y subi mi receta de torta de zanahoria vegin. Gracias Rudio por el merito :) <br />¡Que lo disfruten!</p>
+				    <p><strong>Andrea Garcia, BsA. AR <br/ > <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></strong></p>
+				    <p>Se lo dificil que es encontrar un buen postre vegano, asi que me anime y subi mi receta de torta de zanahoria vegana. Gracias Ruadio por el merito :) <br />¡Que lo disfruten!</p>
 	      		</div>
 	    	</div>
 
@@ -284,7 +290,7 @@
 
 	 <section>	
 
-	<h3 class="title_2">¡Video Recetas!</h3> 
+	<h2 class="title_2">¡Video Recetas!</h2> 
 
 		<div class="contenedor_saludable">
 			
@@ -307,15 +313,16 @@
 			<div class="item1"><a href="javascript:abrir('contacto.html')"> Contacto</a></div>
 			<div class="item2">Encuentranos en nuestras Redes Sociales </div>
 			<div><a href="javascript:abrir('acerca_de.html')"> Acerca de nosotros</a></div>
-			<div><a href="https://es-la.facebook.com/"><i class="fab fa-facebook-f"></i> </a> </div>
-			<div><a href="https://www.instagram.com/?hl=es-la"> <i class="fab fa-instagram"></i> </a></div>
-			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta"> <i class="fab fa-whatsapp"></i></a></div>
+			<div><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f" ></i> </a> </div>
+			<div><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <i class="fab fa-instagram"></i> </a></div>
+			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta" target="_blank"> <i class="fab fa-whatsapp"></i></a></div>
 			<div class="item5" ><a href="javascript:abrir('legales.html')"> Legales</a></div>
 		</div>
 
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/@popperjs/core@2" ></script>
-	
+	 
+ 
 </body>
 </html>
