--- a/postres_celebraciones.html
+++ b/postres_celebraciones.html
@@ -9,28 +9,38 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+	
 	<link rel="stylesheet" type="text/css" href="estilo/estilos.css">
 
 	<script src="https://kit.fontawesome.com/7395b87164.js" crossorigin="anonymous"></script>
+	<script>
+		function abrir(url) {
+		open(url,'','top=400,left=600,width=600,height=400') ;
+		}
+	</script>
 
-	<title>Postres de Celebra</title>
 
-	<meta name="keywords" content="Recetas, recetas saludables, comida saludable, postres saludables" />
+	<title>Postres Celebraciones</title>
+
+	<meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
 
 	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 </head>
 
 <body>
 
+	<!-- Encabezado -->
+
 	<div class="cuerpo">
 
 		<a href="postulacion.html" class="cuerpo__boton"> <i class="fas fa-crown"></i> Postula tus recetas</a>
 
 		<form class="cuerpo__formulario">
-			<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class=" cuerpo__label cuerpo__label--button"  type="submit" name="enviar" value="Buscar">
 		</form> 
 	
 		<div class="cuerpo__logo">
@@ -55,28 +65,32 @@
 
 			<li><a href="postres_celebraciones.html"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
 
-			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
+			<li><a href="postres_goumet.html"> Postres Gourmet  <i class="fas fa-cheese"></i></a></li>
 			
 
 		</ul>
 	</nav>
 
 
-<div class="rec_text">
+	<div class="rec_text">
 
 		<h1 class="titulo_tex"> <em>Glamurosa torta de Zanahoria </em></h1>
 
+		<div class="rect_img">
+			
+			<img src="imagenes/t_zanahoria.jpg" class="imagen" alt="imagen de torta de zanahoria" title="torta de zanahoria"  />
 
-	
 			<hr />
+		</div>
+			
 
-			<p>La primera vez que probé este bizcocho de zanahoria me resultó difícil de creer, ¿un bizcocho de zanahorias?… Pues sí, así es, y está verdaderamente delicioso. Jugad a que vuestros invitados adivinen el componente principal, se sorprenderán como me sucedió a mí… Si además le ponéis una capa de frosting de queso o de chocolate fondant, pasará a convertirse en la tarta de zanahoria más rica del mundo, así que toma nota porque es la receta de bizcocho de zanahoria definitiva y una de las más fáciles.</p>
+			<p>La primera vez que probé este bizcocho de zanahoria me resultó difícil de creer,<strong> ¿un bizcocho de zanahorias? </strong>… Pues sí, así es, y está verdaderamente delicioso. Juazga a que los invitados adivinen el componente principal, se sorprenderán como me sucedió a mí… Si además le pones una capa de frosting de queso o de chocolate fondant, pasará a convertirse en la tarta de zanahoria más rica del mundo, así que toma nota porque es la receta de bizcocho de zanahoria definitiva y una de las más fáciles.</p>
 
 			<h2 class="rec_h2"> Ingredientes </h2> 
 
 		
 
-		<p class="rec_tex_peq">
+			<p class="rec_tex_peq">
 			<strong><em>Para 8 porciones</em></strong> <br /> <br />
 
 			<strong>250 g</strong> &nbsp;&nbsp; de zanahorias crudas (ya peladas y ralladas). <br />
@@ -92,6 +106,9 @@
 			<strong>200 gr</strong> &nbsp; Azucar blanca <br />
 
 			</p>
+
+			<hr />
+
 
 			<h2 class="rec_h2"> Cómo hacerla </h2>	
 
@@ -115,6 +132,38 @@
 		<p>Engrasamos con aceite o mantequilla un molde desmontable de 24 cm como este y echamos la masa. Hornear a 185ºC unos 30 minutos o hasta que veamos que al pinchar con un palillo o la punta de cuchillo el centro del bizcocho de zanahoria éste sale limpio.</p>
 
 		<p>Este bizcocho de zanahoria podemos dejarlo tal como está si por ejemplo lo queréis para desayuno o merienda, o si lo queréis <strong>preparar para alguna celebración podéis espolvorear con azúcar glass o como hemos hecho nosotros arriba con un frosting hecho con Philadelphia y azúcar glass</strong>.</p>
+
+	</div>
+
+
+
+
+	<div>
+			<h2 class="title_2">¡Video Receta!</h2>
+
+			<div class="rect_video">
+				<iframe   src="https://www.youtube.com/embed/wz69GQNZj7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+			</div>
+	
+	
+	<footer>
+		
+		<div class="contenedor footer">
+			<div class="item1"><a href="javascript:abrir('contacto.html')"> Contacto</a></div>
+			<div class="item2">Encuentranos en nuestras Redes Sociales </div>
+			<div><a href="javascript:abrir('acerca_de.html')"> Acerca de nosotros</a></div>
+			<div><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f" ></i> </a> </div>
+			<div><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <i class="fab fa-instagram"></i> </a></div>
+			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta" target="_blank"> <i class="fab fa-whatsapp"></i></a></div>
+			<div class="item5" ><a href="javascript:abrir('legales.html')"> Legales</a></div>
+		</div>
+
+	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/@popperjs/core@2" ></script>
+	
+
 
 </body>
 </html>
