--- a/postres_faciles.html
+++ b/postres_faciles.html
@@ -9,28 +9,38 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+	
 	<link rel="stylesheet" type="text/css" href="estilo/estilos.css">
 
 	<script src="https://kit.fontawesome.com/7395b87164.js" crossorigin="anonymous"></script>
+	<script>
+		function abrir(url) {
+		open(url,'','top=400,left=600,width=600,height=400') ;
+		}
+	</script>
+
 
 	<title>Postres Faciles</title>
 
-	<meta name="keywords" content="Recetas, recetas saludables, comida saludable, postres saludables" />
+	<meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
 
 	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 </head>
 
 <body>
 
+		<!-- Encabezado -->
+
 	<div class="cuerpo">
 
 		<a href="postulacion.html" class="cuerpo__boton"> <i class="fas fa-crown"></i> Postula tus recetas</a>
 
 		<form class="cuerpo__formulario">
-			<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class=" cuerpo__label cuerpo__label--button"  type="submit" name="enviar" value="Buscar">
 		</form> 
 	
 		<div class="cuerpo__logo">
@@ -55,7 +65,7 @@
 
 			<li><a href="postres_celebraciones.html"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
 
-			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
+			<li><a href="postres_goumet.html"> Postres Gourmet  <i class="fas fa-cheese"></i></a></li>
 			
 
 		</ul>
@@ -74,7 +84,7 @@
 
 			<p>No es de extrañar que una elaboración tan clásica como es la mousse de limón presente tanta versiones, porque es un postre bien rico. Con yogur, con leche condensada, sin huevo o sin lácteos, la mousse ligera o la rápida son algunas de ellas. Todas geniales, eso seguro, pero ninguna como <strong>la receta clásica de mousse de limón</strong> , la más auténtica y deliciosa de todas. </p>
 
-		<p> <strong> Deliciosa y etérea </strong>, esta receta es sencilla, pero requiere de tiempo. Tiene como base una crema de limón y un merengue italiano que, una vez listos, solo hay que mezclar y ¡a correr!		
+			<p> <strong> Deliciosa y etérea </strong>, esta receta es sencilla, pero requiere de tiempo. Tiene como base una crema de limón y un merengue italiano que, una vez listos, solo hay que mezclar y ¡a correr!		
 
 		</p>
 
@@ -142,11 +152,13 @@
 
 		</p>
 		
-		<div class="rec_img">
+		<div class="rect_img">
 			
 			<img src="imagenes/prepa_limon.jpg" class="imagen" alt="imagen de preparacion de mouse de limon" title="preparacion de mouse de limon"  />
 
 		</div>
+
+		
 
 
 	</div>
@@ -157,9 +169,9 @@
 			<div class="item1"><a href="javascript:abrir('contacto.html')"> Contacto</a></div>
 			<div class="item2">Encuentranos en nuestras Redes Sociales </div>
 			<div><a href="javascript:abrir('acerca_de.html')"> Acerca de nosotros</a></div>
-			<div><a href="https://es-la.facebook.com/"><i class="fab fa-facebook-f"></i> </a> </div>
-			<div><a href="https://www.instagram.com/?hl=es-la"> <i class="fab fa-instagram"></i> </a></div>
-			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta"> <i class="fab fa-whatsapp"></i></a></div>
+			<div><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f" ></i> </a> </div>
+			<div><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <i class="fab fa-instagram"></i> </a></div>
+			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta" target="_blank"> <i class="fab fa-whatsapp"></i></a></div>
 			<div class="item5" ><a href="javascript:abrir('legales.html')"> Legales</a></div>
 		</div>
 
