--- a/postres_saludables.html
+++ b/postres_saludables.html
@@ -9,28 +9,38 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+	
 	<link rel="stylesheet" type="text/css" href="estilo/estilos.css">
 
 	<script src="https://kit.fontawesome.com/7395b87164.js" crossorigin="anonymous"></script>
+	<script>
+		function abrir(url) {
+		open(url,'','top=400,left=600,width=600,height=400') ;
+		}
+	</script>
+
 
 	<title>Postres Saludables</title>
 
-	<meta name="keywords" content="Recetas, recetas saludables, comida saludable, postres saludables" />
+	<meta name="keywords" content="Recetas, postres, comida, saludable, rapido, celebracion, vegein, raudo, tu cocinita vip, tortas, galletas" />
 
 	<meta name="description" content="Las mejores recetas de postres faciles, saludables y veganos" />
 </head>
 
 <body>
 
+	<!-- Encabezado -->
+
 	<div class="cuerpo">
 
 		<a href="postulacion.html" class="cuerpo__boton"> <i class="fas fa-crown"></i> Postula tus recetas</a>
 
 		<form class="cuerpo__formulario">
-			<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class="cuerpo__label" type="search" name="busqueda" placeholder="Busca tus recetas"> 
+		<input class=" cuerpo__label cuerpo__label--button"  type="submit" name="enviar" value="Buscar">
 		</form> 
 	
 		<div class="cuerpo__logo">
@@ -38,6 +48,9 @@
 		</div>
 
 	</div>
+		
+
+	<!-- Menu -->
 		
 
 	<!-- Menu -->
@@ -55,7 +68,7 @@
 
 			<li><a href="postres_celebraciones.html"> Celebraciones <i class="fas fa-bread-slice"></i></a></li>
 
-			<li><a href="postres_goumet.html"> Postres Goumet  <i class="fas fa-cheese"></i></a></li>
+			<li><a href="postres_goumet.html"> Postres Gourmet  <i class="fas fa-cheese"></i></a></li>
 			
 
 		</ul>
@@ -67,13 +80,17 @@
 
 		<h1 class="titulo_tex"> <em>Galletas de canela, pasas y nueces </em></h1>
 
+		<div class="rect_img">
 			
+			<img src="imagenes/g_saludable.jpg" class="imagen" alt="imagen galletas de pasas y nueces" title="galleta de pasas y nueces"  />
+
+		</div>
 	
 			<hr />
 
 			<p>Para hacer estas galletas de canela, pasas y nueces solo necesitas un bol y un tenedor. Ni robots, ni varillas, ni nada parecido o remotamente difícil de conseguir. Por eso esta es la receta perfecta para tener siempre a mano. El proceso es de lo más sencillo y el resultado delicioso. </p>
 
-		<p> Dependiendo del tiempo de horneado, estas galletas quedarán más o menos tiernas. <strong>nosotros nos gustan ligeramente blandas, pero bien cocidas, en su interior y con los bordes crujientes</strong>A . Si sois de los que las prefieren más hechas, solo tenéis que aumentar el tiempo de horno un par de minutos.</p>
+		<p> Dependiendo del tiempo de horneado, estas galletas quedarán más o menos tiernas. <strong>nosotros nos gustan ligeramente blandas, pero bien cocidas, en su interior y con los bordes crujientes</strong>A pero si eres de los que las prefieren más hechas, solo tenienes que aumentar el tiempo de horno un par de minutos.</p>
 
 
 		<h2 class="rec_h2"> Ingredientes </h2> 
@@ -116,33 +133,44 @@
 				
 			</p>
 
-			<p>En un bol amplio mezclamos la mantequilla y los dos tipos de azúcar. Removemos con un tenedor hasta incorporar y <strong>obtener una pasta cremosa.</strong> Añadimos el huevo y removemos de nuevo. </p>
+			<p>En un bol amplio mezclamos la mantequilla y los dos tipos de azúcar. Removemos con un tenedor hasta incorporar y <strong>obtener una pasta cremosa.</strong> añadimos el huevo y removemos de nuevo. </p>
 
 			<p>Mezclamos la harina, la canela molida y la levadura química e <strong>incorporamos al bol.</strong> Por último agregamos las uvas pasas y las nueces picadas.</p>
 
-			<p><strong>Dejamos enfriar la masa</strong> en la nevera, entre 1 1/2 y 2 horas. Este es un paso importante, la masa necesita reposar y coger consistencia, así que no os lo saltéis.</p>
+			<p><strong>Dejamos enfriar la masa</strong> en la nevera, entre 1 1/2 y 2 horas. Este es un paso importante, la masa necesita reposar y tener consistencia, así que no  lo saltes.</p>
 
 			<p>Con las manos bien limpias, tomamos porciones de masa y boleamos. Colocamos sobre una bandeja de horno cubierta con papel vegetal, dejando espacio entre ellas para que no se peguen, y aplastamos ligeramente con los dedos.</p>
 
 			<p>Cocemos en el horno, precalentado a 175 ºC con calor arriba y abajo, durante 10 minutos o hasta que los <strong>bordes estén dorados. </strong>Dejamos enfriar antes de consumir.</p>
-				
+
+			
+		</div>	
+
+
+		<div>
+			<h2 class="title_2">¡Video Receta!</h2>
+
+			<div class="rect_video">
+				<iframe src="https://www.youtube.com/embed/VyY1oa0-xJs" width="100" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+			</div>
+
+		
 
 
 
 
 	<footer>
 		
-		<div class="contenedor">
-			<div class="item1"><a href=""> Contacto</a></div>
+		<div class="contenedor footer">
+			<div class="item1"><a href="javascript:abrir('contacto.html')"> Contacto</a></div>
 			<div class="item2">Encuentranos en nuestras Redes Sociales </div>
-			<div><a href=""> Acerca de nosotros</a></div>
-			<div><i class="fab fa-facebook-f"></i></div>
-			<div><i class="fab fa-instagram"></i></div>
-			<div><i class="fab fa-whatsapp"></i></div>
-			<div class="item5" ><a href=""> Legales</a></div>
-		</div>
-
-	</footer>		
+			<div><a href="javascript:abrir('acerca_de.html')"> Acerca de nosotros</a></div>
+			<div><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f" ></i> </a> </div>
+			<div><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <i class="fab fa-instagram"></i> </a></div>
+			<div><a href="https://api.whatsapp.com/send?phone=numero&text=quiero postular mis receta" target="_blank"> <i class="fab fa-whatsapp"></i></a></div>
+			<div class="item5" ><a href="javascript:abrir('legales.html')"> Legales</a></div>
+		</div>	
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   	<script src="https://unpkg.com/@popperjs/core@2" ></script>
