Verificacion de pag. externas

--- a/legales.html
+++ b/legales.html
@@ -45,7 +45,7 @@
 
 	<p class="text_ext">
 		
-		
+		 Las fotos y recetas de esta pagina no pueden ser copiadas. <strong>Se reserva el derecho de autor.</strong> 
 
 
 
